# zero2prod

./: Cargo.toml  Dockerfile  sqlx-data.json
.github/workflows/: general.yml
configuration/: base.yaml
migrations/: 20230809220953_create_users_table.sql  20230810001406_rename_password_column.sql  20230811002302_add_salt_to_person.sql  20230811004629_remove_salt_from_person.sql  20231203233743_seed_user.sql  20231213025235_create_idempotency_table.sql  20240217211541_create_newsletter_issues_table.sql  20240217213444_create_issue_delivery_queue_table.sql
scripts/: go.sh  init_db.sh  init_email.sh  init_redis.sh
src/: authentication.rs  configuration.rs  email_client.rs  issue_delivery_worker.rs  lib.rs  main.rs  session_state.rs  startup.rs  telemetry.rs  utils.rs
src/authentication/: middleware.rs  password.rs
src/domain/: new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/idempotency/: key.rs  mod.rs  persistence.rs
src/routes/: newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/admin/: dashboard.rs  logout.rs  mod.rs
src/routes/admin/newsletter/: get.rs  post.rs
src/routes/admin/password/: get.rs  post.rs
src/routes/home/: home.html
src/routes/login/: get.rs  login.html  post.rs
tests/: health_check.rs
tests/api/: change_password.rs  dashboard.rs  health_check.rs  helpers.rs  login.rs  main.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
