[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4"
anyhow = "1"
argon2 = { version = "0.4", features = ["std"] }
base64 = "0.21"
chrono = { version = "0.4.22", default-features = false, features = ["clock"] }
config = "0.13"
htmlescape = "0.3"
rand = { version = "0.8", features = ["std_rng"] }
secrecy = { version = "0.8", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde-aux = "4"
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1", features = ["log"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-actix-web = "0.7"
uuid = { version = "1", features = ["v4", "serde"] }
unicode-segmentation = "1.10.1"
validator = "0.16"
urlencoding = "2"
actix-web-flash-messages = { version = "0.4", features = ["cookies"] }
actix-session = { version = "0.7", features = ["redis-rs-tls-session"] }
serde_json = "1"
actix-web-lab = "0.18"
lettre = { version = "0.11.2", features = ["builder"] }

[dependencies.reqwest]
version = "0.11"
default-features = false
features = ["cookies", "json", "rustls-tls"]

[dependencies.sqlx]
version = "0.6"
default-features = false
features = [
  "runtime-tokio-rustls",
  "macros",
  "postgres",
  "uuid",
  "chrono",
  "migrate",
  "offline"
]

[dev-dependencies]
claims = "0.7"
fake = "~2.3"
linkify = "0.9"
once_cell = "1"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
serde_json = "1"
wiremock = "0.5.0"
